        PR c++/24791         * pt.c (get_template_info): New fn.         (template_class_depth): Use it.         (push_template_decl_real): Check that the template args of the         definition match the args of the previous declaration.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@129660 138bc75d-0d04-0410-961f-82ee72b054a4