gcc/testsuite/g++.dg/template/error33.C
@@ -1,0 +1,11 @@
+// PR c++/24791
+
+template<int> struct A
+{
+    static int i;
+    A() { ++i; }
+};
+
+template<int> int A<0>::i(0);	// { dg-error "template" }
+
+A<0> a;
